...
        title = {
        },
        navigationIcon = {
            IconButton(onClick = { navController.navigate(NavRoute.Home.route) }) {
                Icon(
                    imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                    contentDescription = "Return to home screen",
                    tint = MaterialTheme.colorScheme.onPrimary
                )
            }
        },
        actions = {
            IconButton(onClick = { setSearchVisibility(true) }) {
...
                    tint = MaterialTheme.colorScheme.onPrimary
                )
            }
            IconButton(onClick = { setSettingsSheetVisibility(true) }) {
                Icon(
                    imageVector = Icons.Filled.Settings,
                    contentDescription = "Display settings",
                    tint = MaterialTheme.colorScheme.onPrimary
                )
            }
        },
        colors = TopAppBarDefaults.topAppBarColors(
            containerColor = MaterialTheme.colorScheme.primary,
...
