...
                    )
                }
            }),
            isError = isError,
            supportingText = ({
                if (isError) {
                    Text("Invalid numeric format")
                }
            }),
            keyboardOptions = KeyboardOptions(
                keyboardType = KeyboardType.Decimal,
                imeAction = ImeAction.Done
            ),
...
